# paint-picker

./: README.md  create_venv.sh  notes.txt  paintdb.sqlite3  pyproject.toml
my-python-project/: README.md  pyproject.toml
src/: _setup.py  base_classes.py  database_helpers.py  helpers.py  main.py  models.py  paint_checker.py  paint_parser.py  paint_parser_paddle.py  readme.md  run_test_files.py  schemas.py  sprue_checker.py  update_db.py
templates/: base.html  correct.html  index.html  summary.html  upload_form.html
tests/: test_main.py
