[project]
name = "paint-picker"
version = "0.1.0"
description = "Paint databasing and front-end."
authors = ["traindropper"]
license = "GPL-3.0-or-later"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "imutils>=0.5.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "paddlepaddle-gpu>=3.1.0",
    "paddleocr>=3.1.0",
    "sqlalchemy",
    "torchvision",
    "torch",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "uvicorn",
    "randomcolor"
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"  # replace with your CUDA version

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
paddlepaddle-gpu = { index = "paddlepaddle" }
