[project]
name = "paint-picker"
version = "0.1.1"
description = "Paint databasing and front-end."
authors = ["traindropper"]
license = "GPL-3.0-or-later"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "imutils>=0.5.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "sqlalchemy",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "uvicorn",
    "randomcolor"
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true