[build-system]
requires = ["setuptools>=68.0"]
build-backed = "setuptools.build_meta"

[project]
name = "paint_picker"
version = "0.1.1"
description = "Paint databasing and front-end."
license = "GPL-3.0-or-later"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "paint_api",
    "paint_database_models",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "coverage>=7.8.0",
    "flake8>7.2.0",
    "pylint>3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]

[tool.black]
line-length = 100
force-exclude = '''/(
    |\.git
    |\.mypy_cache
    |\.pytest_cache
    |\.vscode
)/'''

[tool.mypy]
disallow_untyped_defs = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
paint_api = { workspace = true }
paint_database_models = { workspace = true }